k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensy-backend
  namespace: expensy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expensy-backend
  template:
    metadata:
      labels:
        app: expensy-backend
    spec:
      containers:
        - name: backend
          image: group6kub3rdacr.azurecr.io/backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8706
          readinessProbe:
            tcpSocket:
              port: 8706
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8706
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: expensy-backend
  namespace: expensy
spec:
  type: ClusterIP
  selector:
    app: expensy-backend
  ports:
    - port: 8080
      targetPort: 8706
