k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensy-frontend
  namespace: expensy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expensy-frontend
  template:
    metadata:
      labels:
        app: expensy-frontend
    spec:
      containers:
      - name: frontend
        image: group6kub3rdacr.azurecr.io/frontend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: expensy-frontend
  namespace: expensy
spec:
  selector:
    app: expensy-frontend
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
