k8s/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: expensy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: g6wasan2acr.azurecr.io/mongo:6
        ports:
        - containerPort: 27017
        args: ["--bind_ip_all"]
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: expensy
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
