k8s/agic.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensy-ingress
  namespace: expensy
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: expensy-backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: expensy-frontend
                port:
                  number: 80
